add timer hooks, add simple circle ui

--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,29 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  height: 5vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App-content {
+  background-color: #282c34;
+  min-height: 90vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App-footer {
+  background-color: #282c34;
+  height: 5vh;
   display: flex;
   flex-direction: column;
   align-items: center;
