--- a/src/components/timers/circle-timer.css
+++ b/src/components/timers/circle-timer.css
@@ -1,23 +1,28 @@
 
 .circle-timer {
-  display: block;
+  position: relative;
+
+  width: calc(40vmin);
+  height: calc(40vmin);
 
   margin: auto;
 }
 
 .circle-timer-background {
-  position: fixed;
+  position: absolute;
+  left: 0px;
+  top: 0px;
 
-  fill: black;
-
-  width:300px;
-  height:300px;
+  width:100%;
+  height:100%;
 }
 .circle-timer-foreground {
-  position: fixed;
+  position: absolute;
+  transform: rotate(-90deg);
 
-  fill: red;
+  left: 4px;
+  top: 4px;
 
-  width:290px;
-  height:290px;
+  width:calc(100% - 8px);
+  height:calc(100% - 8px);
 }
