--- a/src/App.css
+++ b/src/App.css
@@ -2,19 +2,8 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #282c34;
+  background-color: #1D4E8A;
   height: 5vh;
   display: flex;
   flex-direction: column;
@@ -25,18 +14,18 @@
 }
 
 .App-content {
-  background-color: #282c34;
+  background-color: #2D79D6;
   min-height: 90vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: #102A4A;
 }
 
 .App-footer {
-  background-color: #282c34;
+  background-color: #1D4E8A;
   height: 5vh;
   display: flex;
   flex-direction: column;
@@ -44,17 +33,4 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
