--- a/src/components/timers/circle-timer.css
+++ b/src/components/timers/circle-timer.css
@@ -23,5 +23,16 @@
 .circle-timer-svg >g:nth-child(3) >circle{
   stroke: #703030CF;
   transform-origin: center;
-  transform: rotate(-90deg) scale(0.75, -0.75);
+  transform: rotate(-90deg) scale(0.85, -0.85);
+}
+
+.circle-timer-svg >g:nth-child(4) >circle{
+  fill: black;
+  stroke: #102A4A;
+}
+
+.circle-timer-svg >g:nth-child(4) >line{
+  stroke: #102A4A;
+  transform-origin: center;
+  transform: rotate(-90deg) scale(0.85, -0.85);
 }
